Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30662

SQL/PL package body does not appear in I_S.ROUTINES.ROUTINE_DEFINITION

    XMLWordPrintable

Details

    Description

      For stored procedures and packages, the text of the object is available in the I_S.ROUTINES table in the routine_definition column. For Oracle SQL/PL packages these are regustered, as expected, in the I_S.ROUTINES table but the ROUTINE_DEFINITION column is empty. The mysql.proc table does keep this in the body column as expected though. The above is true both for PACKAGE and PACKAGE BODY.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              karlsson Anders Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 0.5h
                  1d 0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.